fix: domain availability check + payment method instructions
- Fix checkAvailability() to use whois fallback (Cloudflare API doesn't return availability for unregistered domains)
- Add payment method instructions to setup guide (Option A: self-service link, Option B: browser automation)
- Tested: agenticmail.com=taken, agenticmail.io=available, agenticmail.net=available

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,43 @@
-# Stalwart Mail Server
+# ============================================================
+# AgenticMail Environment Configuration
+# Copy this file to .env and update the values
+# ============================================================
+
+# --- Stalwart Mail Server ---
 STALWART_ADMIN_USER=admin
 STALWART_ADMIN_PASSWORD=changeme
 STALWART_URL=http://localhost:8080
 
-# AgenticMail
+# --- AgenticMail Core ---
+# Master key for admin API access (generate with: openssl rand -hex 32)
 AGENTICMAIL_MASTER_KEY=mk_changeme
 AGENTICMAIL_API_PORT=3100
 AGENTICMAIL_DATA_DIR=~/.agenticmail
 
-# SMTP/IMAP (local Stalwart)
+# --- SMTP/IMAP (local Stalwart) ---
 SMTP_HOST=localhost
 SMTP_PORT=587
 IMAP_HOST=localhost
 IMAP_PORT=143
+
+# --- Gateway: Relay Mode (Gmail/Outlook) ---
+# Uncomment to use relay mode
+# RELAY_PROVIDER=gmail
+# RELAY_EMAIL=you@gmail.com
+# RELAY_PASSWORD=xxxx xxxx xxxx xxxx
+
+# --- Gateway: Domain Mode (Cloudflare) ---
+# Uncomment to use domain mode
+# CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
+# CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
+# AGENTICMAIL_DOMAIN=yourdomain.com
+
+# --- Inbound Webhook (Cloudflare Email Worker) ---
+# Secret shared between the Email Worker and the inbound endpoint
+# Auto-generated during domain setup if not set
+# AGENTICMAIL_INBOUND_SECRET=your_inbound_secret
+
+# --- Gmail SMTP Relay (for domain mode outbound) ---
+# Recommended if your IP lacks a PTR record (residential connections)
+# GMAIL_RELAY_EMAIL=you@gmail.com
+# GMAIL_RELAY_APP_PASSWORD=xxxx xxxx xxxx xxxx
