--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,6 +60,9 @@
     "ai-agent",
     "mcp"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Ope Olatunji",
   "license": "MIT"
 }
