--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -53,6 +53,9 @@
     "agenticmail",
     "model-context-protocol"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Ope Olatunji",
   "license": "MIT"
 }
