--- a/packages/openclaw/package.json
+++ b/packages/openclaw/package.json
@@ -29,6 +29,9 @@
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Ope Olatunji",
   "license": "MIT"
 }
