Auto-inject AgenticMail coordination guidance into all agent sessions
When the AgenticMail plugin is installed, every agent session now receives
guidance at startup telling it to prefer AgenticMail's task queue and RPC
tools (assign_task, call_agent, etc.) over basic sessions_spawn/sessions_send.

This ensures existing OpenClaw agents automatically learn about and use the
superior coordination system without requiring manual configuration.

Also updated plugin.json tools list from 33 to 54 (was missing batch_read,
digest, template_send, wait_for_email, assign_task, check_tasks, claim_task,
submit_result, call_agent, rules, spam, pending_emails, whoami,
update_metadata, delete_agent, deletion_reports, cleanup, mark_read,
setup_guide, setup_gmail_alias).

--- a/packages/openclaw/package.json
+++ b/packages/openclaw/package.json
@@ -14,7 +14,10 @@
   "files": [
     "dist",
     "openclaw.plugin.json",
-    "skill"
+    "skill",
+    "README.md",
+    "REFERENCE.md",
+    "LICENSE"
   ],
   "openclaw": {
     "extensions": ["./dist/index.js"]
