Add 🎀 ribbon logo to AgenticMail branding everywhere
- Startup banner: 🎀 AgenticMail
- /about endpoint: name and description
- MCP server metadata
- OpenClaw plugin displayName and description
- SKILL.md header and description
- README.md title and sections
- CONTRIBUTING.md title
- Agent coordination injection text
- MCP tool descriptions and status output

X-Powered-By header stays ASCII (HTTP spec requirement)
but every user-facing surface now carries the 🎀 identity.

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agenticmail/mcp",
   "version": "0.2.26",
-  "description": "MCP server for AgenticMail — use email from Claude Code and Claude Desktop",
+  "description": "MCP server for AgenticMail — use email from any MCP-compatible AI client",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -50,7 +50,7 @@
     "mcp",
     "email",
     "ai",
-    "claude",
+    "ai-agent",
     "agenticmail",
     "model-context-protocol"
   ],
