Auto-spawn agent sessions for call_agent when no active listener exists
When agenticmail_call_agent targets an agent with no active SSE watcher
and no existing sub-agent session, the plugin now auto-spawns a session:

1. Checks activeSSEWatchers — skip if agent already has a listener
2. Checks subagentAccounts — skip if a sub-agent session already running
   (prevents double-spawn when used alongside sessions_spawn)
3. Strategy 1: OpenClaw webhook (/hooks/agent) if hooks token is set
4. Strategy 2: Cron wake event to alert main session about pending task

This means call_agent 'just works' like sessions_spawn — but with
structured results, task lifecycle tracking, and persistence.

Smart about not double-spawning: if sessions_spawn already created a
session with AgenticMail email provisioned, the SSE watcher will be
active and auto-spawn is skipped entirely.

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,8 @@ IMAP_PORT=143
 # Recommended if your IP lacks a PTR record (residential connections)
 # GMAIL_RELAY_EMAIL=you@gmail.com
 # GMAIL_RELAY_APP_PASSWORD=xxxx xxxx xxxx xxxx
+
+# --- Debug ---
+# Set to any value to enable verbose per-message logging
+# (relay poll processing, inbound delivery, SMTP send confirmations)
+# AGENTICMAIL_DEBUG=1
