chore: npm publish readiness — fix package metadata, model-agnostic docs, debug logging
- Replace all model-specific language with model-agnostic wording across docs
- Fix package metadata: add engines, repository, homepage, bugs, keywords, prepublishOnly
- Add publishConfig, use caret versions for internal deps, deduplicate keywords
- Add *.tgz to .gitignore to prevent pack artifacts from being committed
- Convert noisy per-message console.logs to debug-only (gated behind AGENTICMAIL_DEBUG)
- Remove API key leak in tools.ts
- Add chat-ui.ts and ws-chat.ts modules for /chat command
- Update tool counts in docs (MCP=54, OpenClaw=54, Shell=36)

Co-Authored-By: Ope Olatunji <ope.olatunji@outlook.com>

--- a/agenticmail/package.json
+++ b/agenticmail/package.json
@@ -26,8 +26,8 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@agenticmail/api": "0.2.26",
-    "@agenticmail/core": "0.2.26",
+    "@agenticmail/api": "^0.2.26",
+    "@agenticmail/core": "^0.2.26",
     "json5": "^2.2.3"
   },
   "devDependencies": {
@@ -55,11 +55,13 @@
     "mcp",
     "ai-agent",
     "agenticmail",
-    "ai-agent",
     "llm",
     "gateway",
     "cloudflare"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Ope Olatunji",
   "license": "MIT"
 }
