fix: update Stalwart Docker image in CI workflow
The stalwartlabs/mail-server image was renamed to stalwartlabs/stalwart,
causing CI to fail on every run.

Co-Authored-By: Ope Olatunji <ope.olatunji@outlook.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     services:
       stalwart:
-        image: stalwartlabs/mail-server:latest
+        image: stalwartlabs/stalwart:latest
         ports:
           - 8080:8080
           - 587:587
