feat: clean up OpenClaw config on npm uninstall
Adds a preuninstall script to @agenticmail/openclaw that removes
the plugin entry and load path from ~/.openclaw/openclaw.json.
Prevents "plugin not found" errors after uninstalling.

Co-Authored-By: Ope Olatunji <ope.olatunji@outlook.com>

--- a/packages/openclaw/package.json
+++ b/packages/openclaw/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agenticmail/openclaw",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "OpenClaw plugin and skill for AgenticMail",
   "type": "module",
   "main": "dist/index.js",
@@ -14,6 +14,7 @@
   "files": [
     "dist",
     "openclaw.plugin.json",
+    "scripts",
     "skill",
     "README.md",
     "REFERENCE.md",
@@ -27,6 +28,7 @@
   "scripts": {
     "build": "tsup index.ts --format esm --dts --clean",
     "test": "vitest run --passWithNoTests",
+    "preuninstall": "node scripts/uninstall.mjs",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {},
