brand: first platform to give AI agents real email AND phone numbers
- Updated all package.json descriptions to highlight email + SMS + phone
- Added keywords: sms, phone, google-voice, text-message, verification-code
- Updated all README opening lines to lead with the differentiator
- Root, agenticmail, core, api, mcp, openclaw — all updated
- Positioning: 'the first platform to give AI agents real email addresses and phone numbers'

--- a/agenticmail/package.json
+++ b/agenticmail/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agenticmail",
-  "version": "0.5.1",
-  "description": "Email infrastructure for AI agents — send and receive real email programmatically",
+  "version": "0.5.2",
+  "description": "Email and SMS infrastructure for AI agents \u2014 the first platform to give agents real email addresses and phone numbers",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,6 +47,8 @@
   "bugs": "https://github.com/agenticmail/agenticmail/issues",
   "keywords": [
     "email",
+    "sms",
+    "phone",
     "ai",
     "agent",
     "mail",
@@ -57,7 +59,11 @@
     "agenticmail",
     "llm",
     "gateway",
-    "cloudflare"
+    "cloudflare",
+    "google-voice",
+    "text-message",
+    "verification-code",
+    "openclaw"
   ],
   "publishConfig": {
     "access": "public"
