--- a/package.json
+++ b/package.json
@@ -27,5 +27,15 @@
     "node": ">=20"
   },
   "author": "Ope Olatunji",
-  "license": "MIT"
+  "license": "MIT",
+  "description": "Email and SMS infrastructure for AI agents \u2014 the first platform to give agents real email addresses and phone numbers",
+  "keywords": [
+    "email",
+    "sms",
+    "phone",
+    "ai",
+    "agent",
+    "agenticmail",
+    "google-voice"
+  ]
 }
