--- a/packages/openclaw/package.json
+++ b/packages/openclaw/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agenticmail/openclaw",
-  "version": "0.5.1",
-  "description": "OpenClaw plugin and skill for AgenticMail",
+  "version": "0.5.2",
+  "description": "OpenClaw plugin for AgenticMail \u2014 email, SMS, and phone number access for OpenClaw agents",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -50,11 +50,14 @@
   "keywords": [
     "openclaw",
     "email",
+    "sms",
+    "phone",
     "ai",
     "ai-agent",
     "agenticmail",
     "plugin",
-    "skill"
+    "skill",
+    "google-voice"
   ],
   "publishConfig": {
     "access": "public"
