--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agenticmail/mcp",
-  "version": "0.5.39",
+  "version": "0.5.40",
   "description": "MCP server for AgenticMail \u2014 give any AI client real email and SMS capabilities",
   "type": "module",
   "main": "dist/index.js",
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.0",
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "@agenticmail/core": "^0.5.39"
   },
   "devDependencies": {
     "tsup": "^8.4.0",
