--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agenticmail/mcp",
-  "version": "0.5.41",
-  "description": "MCP server for AgenticMail \u2014 give any AI client real email and SMS capabilities",
+  "version": "0.5.42",
+  "description": "MCP server for AgenticMail — give any AI client real email and SMS capabilities",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
