--- a/agenticmail/package.json
+++ b/agenticmail/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agenticmail",
-  "version": "0.5.41",
-  "description": "Email and SMS infrastructure for AI agents \u2014 the first platform to give agents real email addresses and phone numbers",
+  "version": "0.5.42",
+  "description": "Email and SMS infrastructure for AI agents — the first platform to give agents real email addresses and phone numbers",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
