--- a/packages/openclaw/package.json
+++ b/packages/openclaw/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agenticmail/openclaw",
-  "version": "0.5.41",
-  "description": "OpenClaw plugin for AgenticMail \u2014 email, SMS, and phone number access for OpenClaw agents",
+  "version": "0.5.42",
+  "description": "OpenClaw plugin for AgenticMail — email, SMS, and phone number access for OpenClaw agents",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
