--- a/docker/stalwart/config/stalwart.toml
+++ b/docker/stalwart/config/stalwart.toml
@@ -1,7 +1,7 @@
 # Stalwart Mail Server — AgenticMail Configuration
 
 [server]
-hostname = "2sabi.net"
+hostname = "localhost"
 
 [server.listener.smtp]
 bind = ["0.0.0.0:25"]
@@ -47,16 +47,3 @@ enable = true
 [authentication.fallback-admin]
 user = "admin"
 secret = "cc90b0a6fb4031235c99ef27b3698043"
-
-[signature."agenticmail-2sabi-net"]
-private-key = "%{file:/opt/stalwart/etc/dkim-2sabi.net.key}%"
-domain = "2sabi.net"
-selector = "agenticmail"
-headers = ["From", "To", "Date", "Subject", "Message-ID"]
-algorithm = "rsa-sha256"
-canonicalization = "relaxed/relaxed"
-report = false
-
-[auth.dkim]
-sign = [ { if = "listener != 'smtp'", then = "['agenticmail-2sabi-net']" },
-         { else = false } ]
